# job-matcher-ai

./: .gitignore  .pre-commit-config.yaml  IT_MATCH.csv  Makefile  README.md  docker-compose.yml  dummy_candidate_data.json  pyproject.toml
.github/workflows/: CI.yml
backend/: .dockerignore  Api-search.md  Dockerfile  Makefile  Readme.md  pyproject.toml
backend/app/: config.py  main.py  routers.py
backend/app/core/: security.py
backend/app/db/: database.py
backend/app/db/domain/: members.py  models.py  repositories.py  services.py  unit_of_work.py
backend/app/db/infrastructure/: database.py  members.py  orm.py  repositories.py
backend/app/models/: auth.py  auth.py~  candidate.py  embeddings.py  employer.py  filter.py  match.py
backend/app/routes/: auth.py  candidates.py  employers.py  match.py  resumes.py  vacancies.py
backend/app/services/: dependencies.py  dependencies.py~  embeddings.py  fiter.py  matching.py  storage.py
backend/app/tests/: test_api.py
backend/app/utils/: dummy_employer_data.json  dummy_generator.py  embeddings.py  generator_test_data.py  qdrant_api.py
backend/app/utils/filter/: collection_resolver.py  filter_builder.py  score.py
backend/migrations/: env.py
backend/migrations/versions/: 428036391854_added_fields.py  4e2975322c6e_init_tables.py  5ba58c3afca1_init_tables.py  e181e9a37a34_init_tables.py
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/vacancies/: route.ts
frontend/app/auth/: login.tsx  profile.tsx  register.tsx
frontend/app/auth/login/: LoginForm.tsx  page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/candidate/: page.tsx
frontend/app/cards/: page.tsx  resume.tsx  vacancy.tsx
frontend/app/cards/[id]/: page.tsx
frontend/app/context/: AuthContext.tsx
frontend/app/create/: CreateResume.tsx  CreateVacancy.tsx
frontend/app/employer/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/resumes/: page.tsx
frontend/app/vacancies/: page.tsx
frontend/components/: HomePage.tsx  Navbar.tsx
frontend/lib/: api.ts
frontend/public/: index.html
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/: register.tsx
frontend/src/app/auth/login/: LoginForm.tsx  page.tsx
frontend/src/app/cards/: resume.tsx  vacancy.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/app/create/: CreateResume.tsx  CreateVacancy.tsx  page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/resumes/: page.tsx
frontend/src/app/vacancies/: page.tsx
frontend/src/components/: HomePage.tsx  Navbar.tsx  PopupMessage.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: types.tsx
frontend/styles/: globals.css
infra/: docker-compose.yml
tests/: db_candidate_test.py  db_employer_test.py
(+3 files in other folders)
