[project]
name = "job-matcher-ai"
version = "0.1.0"
description = ""
authors = [
    { name = "Sergey", email = "sgudkovv@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.13.1,<0.14.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "fastapi (>=0.116.2,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "hf-xet (>=1.1.10,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (<=4.3.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "rapidfuzz (>=3.14.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[[tool.mypy.overrides]]
module = [
    "routers.*",
    "routes.*",
    "services.*",
    "config.*",
    "repositories.*",
    "frontend/*",
]

plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
ignore_missing_imports  = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.5"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
